alignment  fix

--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body {
     height: 300px;
 }
 
-.title {
+.title-wrap .title {
     position: absolute;
     z-index: 999;
     text-align: center;
